--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,10 @@
         <title>Scrape and MongoDB CRUD</title>
     </head>
     <body>
-        <h1> Scrape </h1>
-        <div id='articles'> </div>
-        <div id='notes'> </div>
+        <h1 id='scrapeBtn'> Scrape </h1>
+        <h1 id='articlesBtn'> Articles </h1>
+        <h1 id='notesBtn'> Notes </h1>
+        <div class='articlesArea'> </div>
 
         <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
         <script src='./assets/js/app.js'></script>
